# fargo3d

./: .gitignore  CMakeLists.txt  CMakePresets.json  Citations.txt  Makefile  README  README.md  betacooltest.par  compiled.par  license.txt  myadditions.md  run.sh  run4_4condor.csv  slurmshot  test.ipynb
in/: binary.par  daniele.fasano.par  dbnets1.0.par  fargo.par  fargo_multifluid.par  mri.par  otvortex.par  sod1d.par  template.par
p.25mth_visc.4/outputs_r.05/: IDL.var  variables.par
planets/: Kepler38.cfg  MobileEarth.cfg  MobileJupiter.cfg  MobileSaturn.cfg  SuperEarth.cfg  earth.cfg  jupiter.cfg  neptune.cfg  saturn.cfg  zero.cfg
scripts/: blocks.py  blocks_function.py  bound_code.py  boundparser.py  c2cuda.py  collisions_gpu.py  global.py  make.py  par.py  param.py  single2multi.py  test.py  unitparser.py
setups/betacooltest/: betacooltest.bound.0  betacooltest.bound.1  betacooltest.opt  betacooltest.par  condinit.c
setups/binary/: binary.bound  binary.opt  binary.par  condinit.c  stockholm.c
setups/daniele.fasano/: daniele.fasano.opt  daniele.fasano.par  fargo.bound  fargo.opt  fargo.par
setups/dbnets/: boundaries.txt  condinit.c  dbnets.0  dbnets.par
setups/dbnets1.0/: dbnets1.0.bound.1  dbnets1.0.opt  dbnets1.0.par  fargo_multifluid.opt  fargo_multifluid.par
setups/fargo/: CMakeLists.txt  boundaries.txt  condinit.c  fargo.bound.0  fargo.json  fargo.opt  fargo.par
setups/fargo3d_nu/: LowTasks.c  condinit.c  fargo3d_nu.bound.0  fargo3d_nu.opt  fargo3d_nu.par  mesh.c  prototypes.h
setups/fargo_multifluid/: CMakeLists.txt  boundaries.txt  condinit.c  fargo_multifluid.bound.3  fargo_multifluid.json  fargo_multifluid.opt
setups/fargo_multifluid_dustsizes/: ._boundaries.txt  condinit.c  fargo_multifluid_dustsizes.bound.0  fargo_multifluid_dustsizes.bound.1  fargo_multifluid_dustsizes.bound.2  fargo_multifluid_dustsizes.opt  fargo_multifluid_dustsizes.par
setups/fargo_nu/: fargo_nu.bound.0  fargo_nu.opt  fargo_nu.par
setups/grow_planet/: condinit.c  grow_planet.opt  grow_planet.par  main.c
setups/mri/: condinit.c  mon_torque.c  mri.blocks.float.k20m  mri.bound.0  mri.opt  mri.par  nimhd_ohmic_diffusion_coeff.c  postrestarthook.c  potential.c  resistivity.c
setups/otvortex/: condinit.c  otvortex.mandatories  otvortex.opt
setups/p3diso/: condinit.c  p3diso.bound  p3diso.opt  p3diso.par
setups/p3disof/: condinit.c  p3disof.bound  p3disof.opt  p3disof.par
setups/sod1d/: condinit.c  sod1d.bound  sod1d.opt
src/: CMakeLists.txt  CompPresAd.c  CompPresIso.c  CompPresPoly.c  Compute_Mean.c  LowTasks.c  ShearingPeriodicBC.c  addviscosity_cart.c  addviscosity_cyl.c  addviscosity_sph.c  advect_shift.c  algogas.c  allocate.c  boundary.c  cfl.c  cfl_b.c  cfl_fluids_min.c  change_arch.c  change_frame.c  checkmute_y.c  checkmute_z.c  checknans.c  closed_bc.c  collision_kernel.h  collisions.c  colrate.c  comm.c  comm_device.c  compfields.c  compute_emf.c  compute_force.c  compute_jx.c  compute_jy.c  compute_jz.c  compute_residual.c  compute_slopes.c  compute_star.c  compute_vmed.c  condinit.c  copy_field.c  (+129 more)
std/: boundaries.txt  boundary_template.c  centering.txt  collisions_template.cu  defaultflags  func_arch.cfg  standard.units  stdpar.par
test_suite/: dim.py  dimp3diso.py  forcedmig.py  gpuvscpu.py  mpi.py  permut.py  restart.py  restartmov.py  restartp3d.py  symdisk.py
utils/cuda/: get_cuda_sm.sh  readme.md
utils/fortran/: reader.f90
utils/gnuplot/: plot2dfields.gpl  reader.gpl
utils/python/: advanced.py  parameters.py  reader.py  reader_mpiio.py
